<resources>

    <string name="app_name">Chinachan</string>

    <string name="title_program_list">Program</string>
    <string name="title_search">Search</string>
    <string name="title_reservation_list">Reservation</string>
    <string name="title_record_list">Record</string>
    <string name="title_program">Program Detail</string>
    <string name="title_reserve_rule">Reserve Rule</string>
    <string name="title_reserved">Reserved Program</string>
    <string name="title_recording">Recording Program</string>
    <string name="title_recorded">Recorded Program</string>
    <string name="title_setting">Setting</string>

    <string name="setting_label_category_server">Server</string>
    <string name="setting_label_host">host</string>
    <string name="setting_label_user">user</string>
    <string name="setting_label_password">password</string>
    <string name="setting_label_register">register</string>

</resources>
