<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_top"
    app:startDestination="@id/program_list_fragment">

    <fragment
        android:id="@+id/program_list_fragment"
        android:name="io.github.jimmysharp.chinachan.ui.top.ProgramListFragment"
        android:label="@string/title_program_list"
        tools:layout="@layout/program_list_fragment" />
    <fragment
        android:id="@+id/search_fragment"
        android:name="io.github.jimmysharp.chinachan.ui.top.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/search_fragment" />
    <fragment
        android:id="@+id/reservation_list_fragment"
        android:name="io.github.jimmysharp.chinachan.ui.top.ReservationListFragment"
        android:label="@string/title_reservation_list"
        tools:layout="@layout/reservation_list_fragment" />
    <fragment
        android:id="@+id/record_list_fragment"
        android:name="io.github.jimmysharp.chinachan.ui.top.RecordListFragment"
        android:label="@string/title_record_list"
        tools:layout="@layout/record_list_fragment" />
</navigation>